--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "8.1",
+        "php": "^8.1",
         "enshrined/svg-sanitize": "^0.16",
         "meyfa/php-svg": "^0.14.5",
         "silverstripe/framework": "^5"
